test/files/pos/t5638/Usage.scala
object Usage {
  def among: Among = new Among
}
