test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Def_13.scala
object Test13 {
  def `macro` = 2
}